--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-files": "^2.4.8",
     "react-hotkeys-hook": "^2.2.1",
+    "react-papaparse": "^3.17.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
